Typo fix: profil => profile

--- a/src/templates/settings.twig
+++ b/src/templates/settings.twig
@@ -10,4 +10,4 @@
     required: true
 }) }}
 
-<p>{{ "Make sure the entered instagram user profil is not private."|t("instagramfeed") }}</p>
+<p>{{ "Make sure the entered Instagram user profile is not private."|t("instagramfeed") }}</p>
